1. added responsiveness to get-started cmp 2. fixed button colors on hover to correct colors in get-started cmp 3. fixed spacing in info-container cmp, at screen range of tablet

--- a/src/assets/styles/basics/_media-queries.scss
+++ b/src/assets/styles/basics/_media-queries.scss
@@ -90,6 +90,12 @@
             }
         }
     }
+
+    .get-started-container {
+        & .get-started .title h2 {
+            @include typography-9;
+        }
+    }
 }
 
 // less than 768px
@@ -188,6 +194,15 @@
             }
         }
     }
+
+    .get-started-container {
+        padding-block: 83px;
+
+        & .get-started {
+            flex-direction: column;
+            text-align: center;
+        }
+    }
 }
 
 // less than 375px
@@ -239,7 +254,7 @@
 
     .home-page {
         & .info-container .info {
-            margin-inline-end: 100px;
+            margin-inline: 60px;
 
             & .list {
                 gap: 32px;
@@ -318,6 +333,14 @@
             gap: 51px;
             flex-direction: row;
             justify-content: space-between;
+        }
+    }
+
+    .get-started-container {
+        padding-block: 76px;
+
+        & .get-started {
+            padding-inline: 100px;
         }
     }
 }
@@ -430,6 +453,12 @@
                 flex-direction: column;
                 align-items: flex-end;
             }
+        }
+    }
+
+    .get-started-container {
+        & .get-started .title h2 {
+            @include typography-3;
         }
     }
 
